lib/core/ffi/recovery_bindings_generated.dart

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint
import 'dart:ffi' as ffi;

/// Auto-generated FFI bindings for recovery.h
class RecoveryBindingsGenerated {
  /// Holds the symbol lookup function.
  final ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
  _lookup;

  /// The symbols are looked up in [dynamicLibrary].
  RecoveryBindingsGenerated(ffi.DynamicLibrary dynamicLibrary)
    : _lookup = dynamicLibrary.lookup;

  /// The symbols are looked up with [lookup].
  RecoveryBindingsGenerated.fromLookup(
    ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName) lookup,
  ) : _lookup = lookup;

  ffi.Pointer<ffi.Char> recovery_list_drives() {
    return _recovery_list_drives();
  }

  late final _recovery_list_drivesPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<ffi.Char> Function()>>(
        'recovery_list_drives',
      );
  late final _recovery_list_drives = _recovery_list_drivesPtr
      .asFunction<ffi.Pointer<ffi.Char> Function()>();

  int recovery_open(ffi.Pointer<ffi.Char> device_path) {
    return _recovery_open(device_path);
  }

  late final _recovery_openPtr =
      _lookup<ffi.NativeFunction<ffi.Int32 Function(ffi.Pointer<ffi.Char>)>>(
        'recovery_open',
      );
  late final _recovery_open = _recovery_openPtr
      .asFunction<int Function(ffi.Pointer<ffi.Char>)>();

  int recovery_disk_size(int handle) {
    return _recovery_disk_size(handle);
  }

  late final _recovery_disk_sizePtr =
      _lookup<ffi.NativeFunction<ffi.Int64 Function(ffi.Int32)>>(
        'recovery_disk_size',
      );
  late final _recovery_disk_size = _recovery_disk_sizePtr
      .asFunction<int Function(int)>();

  int recovery_scan(
    int handle,
    ffi.Pointer<ffi.Char> output_dir,
    RecoveryCallback callback,
    int enable_fat,
    int enable_carve,
  ) {
    return _recovery_scan(
      handle,
      output_dir,
      callback,
      enable_fat,
      enable_carve,
    );
  }

  late final _recovery_scanPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int32 Function(
            ffi.Int32,
            ffi.Pointer<ffi.Char>,
            RecoveryCallback,
            ffi.Int32,
            ffi.Int32,
          )
        >
      >('recovery_scan');
  late final _recovery_scan = _recovery_scanPtr
      .asFunction<
        int Function(int, ffi.Pointer<ffi.Char>, RecoveryCallback, int, int)
      >();

  void recovery_cancel(int handle) {
    return _recovery_cancel(handle);
  }

  late final _recovery_cancelPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int32)>>(
        'recovery_cancel',
      );
  late final _recovery_cancel = _recovery_cancelPtr
      .asFunction<void Function(int)>();

  void recovery_close(int handle) {
    return _recovery_close(handle);
  }

  late final _recovery_closePtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int32)>>(
        'recovery_close',
      );
  late final _recovery_close = _recovery_closePtr
      .asFunction<void Function(int)>();

  void recovery_free_string(ffi.Pointer<ffi.Char> ptr) {
    return _recovery_free_string(ptr);
  }

  late final _recovery_free_stringPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Char>)>>(
        'recovery_free_string',
      );
  late final _recovery_free_string = _recovery_free_stringPtr
      .asFunction<void Function(ffi.Pointer<ffi.Char>)>();
}

final class __mbstate_t extends ffi.Union {
  @ffi.Array.multi([128])
  external ffi.Array<ffi.Char> __mbstate8;

  @ffi.LongLong()
  external int _mbstateL;
}

@ffi.Packed(1)
final class RecoveryEvent extends ffi.Struct {
  @ffi.Int32()
  external int event_type;

  @ffi.Double()
  external double percent;

  @ffi.Int64()
  external int scanned_bytes;

  @ffi.Int32()
  external int speed_mbps;

  @ffi.Array.multi([16])
  external ffi.Array<ffi.Char> file_type;

  @ffi.Array.multi([256])
  external ffi.Array<ffi.Char> filename;

  @ffi.Array.multi([32])
  external ffi.Array<ffi.Char> modifiedTime;

  @ffi.Int64()
  external int file_size;

  @ffi.Int64()
  external int sector_offset;

  @ffi.Int32()
  external int error_code;

  @ffi.Array.multi([256])
  external ffi.Array<ffi.Char> error_msg;

  @ffi.Int32()
  external int total_found;

  @ffi.Int32()
  external int fat_count;

  @ffi.Int32()
  external int carve_count;

  @ffi.Int64()
  external int duration_ms;
}

typedef RecoveryCallback =
    ffi.Pointer<ffi.NativeFunction<RecoveryCallbackFunction>>;
typedef RecoveryCallbackFunction =
    ffi.Void Function(ffi.Pointer<RecoveryEvent> event);
typedef DartRecoveryCallbackFunction =
    void Function(ffi.Pointer<RecoveryEvent> event);

const int __WORDSIZE = 64;

const int __has_safe_buffers = 1;

const int __DARWIN_ONLY_64_BIT_INO_T = 1;

const int __DARWIN_ONLY_UNIX_CONFORMANCE = 1;

const int __DARWIN_ONLY_VERS_1050 = 1;

const int __DARWIN_UNIX03 = 1;

const int __DARWIN_64_BIT_INO_T = 1;

const int __DARWIN_VERS_1050 = 1;

const int __DARWIN_NON_CANCELABLE = 0;

const String __DARWIN_SUF_EXTSN = '\$DARWIN_EXTSN';

const int __DARWIN_C_ANSI = 4096;

const int __DARWIN_C_FULL = 900000;

const int __DARWIN_C_LEVEL = 900000;

const int __STDC_WANT_LIB_EXT1__ = 1;

const int __DARWIN_NO_LONG_LONG = 0;

const int _DARWIN_FEATURE_64_BIT_INODE = 1;

const int _DARWIN_FEATURE_ONLY_64_BIT_INODE = 1;

const int _DARWIN_FEATURE_ONLY_VERS_1050 = 1;

const int _DARWIN_FEATURE_ONLY_UNIX_CONFORMANCE = 1;

const int _DARWIN_FEATURE_UNIX_CONFORMANCE = 3;

const int __has_ptrcheck = 0;

const int __has_bounds_safety_attributes = 0;

const int __DARWIN_NULL = 0;

const int __PTHREAD_SIZE__ = 8176;

const int __PTHREAD_ATTR_SIZE__ = 56;

const int __PTHREAD_MUTEXATTR_SIZE__ = 8;

const int __PTHREAD_MUTEX_SIZE__ = 56;

const int __PTHREAD_CONDATTR_SIZE__ = 8;

const int __PTHREAD_COND_SIZE__ = 40;

const int __PTHREAD_ONCE_SIZE__ = 8;

const int __PTHREAD_RWLOCK_SIZE__ = 192;

const int __PTHREAD_RWLOCKATTR_SIZE__ = 16;

const int INT8_MAX = 127;

const int INT16_MAX = 32767;

const int INT32_MAX = 2147483647;

const int INT64_MAX = 9223372036854775807;

const int INT8_MIN = -128;

const int INT16_MIN = -32768;

const int INT32_MIN = -2147483648;

const int INT64_MIN = -9223372036854775808;

const int UINT8_MAX = 255;

const int UINT16_MAX = 65535;

const int UINT32_MAX = 4294967295;

const int UINT64_MAX = -1;

const int INT_LEAST8_MIN = -128;

const int INT_LEAST16_MIN = -32768;

const int INT_LEAST32_MIN = -2147483648;

const int INT_LEAST64_MIN = -9223372036854775808;

const int INT_LEAST8_MAX = 127;

const int INT_LEAST16_MAX = 32767;

const int INT_LEAST32_MAX = 2147483647;

const int INT_LEAST64_MAX = 9223372036854775807;

const int UINT_LEAST8_MAX = 255;

const int UINT_LEAST16_MAX = 65535;

const int UINT_LEAST32_MAX = 4294967295;

const int UINT_LEAST64_MAX = -1;

const int INT_FAST8_MIN = -128;

const int INT_FAST16_MIN = -32768;

const int INT_FAST32_MIN = -2147483648;

const int INT_FAST64_MIN = -9223372036854775808;

const int INT_FAST8_MAX = 127;

const int INT_FAST16_MAX = 32767;

const int INT_FAST32_MAX = 2147483647;

const int INT_FAST64_MAX = 9223372036854775807;

const int UINT_FAST8_MAX = 255;

const int UINT_FAST16_MAX = 65535;

const int UINT_FAST32_MAX = 4294967295;

const int UINT_FAST64_MAX = -1;

const int INTPTR_MAX = 9223372036854775807;

const int INTPTR_MIN = -9223372036854775808;

const int UINTPTR_MAX = -1;

const int INTMAX_MAX = 9223372036854775807;

const int UINTMAX_MAX = -1;

const int INTMAX_MIN = -9223372036854775808;

const int PTRDIFF_MIN = -9223372036854775808;

const int PTRDIFF_MAX = 9223372036854775807;

const int SIZE_MAX = -1;

const int RSIZE_MAX = 9223372036854775807;

const int WCHAR_MAX = 2147483647;

const int WCHAR_MIN = -2147483648;

const int WINT_MIN = -2147483648;

const int WINT_MAX = 2147483647;

const int SIG_ATOMIC_MIN = -2147483648;

const int SIG_ATOMIC_MAX = 2147483647;

const int EVENT_PROGRESS = 1;

const int EVENT_FILE_FOUND = 2;

const int EVENT_ERROR = 3;

const int EVENT_DONE = 4;
